Add sendTransaction API
